# DownscaledClimateData

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
downscaled_climate_data/: __init__.py  definitions.py
downscaled_climate_data/assets/: as_zarr.py  loca2.py
downscaled_climate_data/sensors/: loca2_models.py  loca2_sensor.py
tests/: test_sensors.py
tests/assets/: loca2_esm_catalog.csv  test_as_zarr_asset.py  test_loca2_asset.py  test_loca2_esm_catalog.py  test_loca2_zarr.py
tests/sensors/: test_local2_sensors.py
