[project]
name = "DownscaledClimateData"
version = "1.0.0"
description = "Dagster project for downscaled climate data"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-postgres",
    "dagster-aws",
    "s3fs",
    "xarray[complete]",
    "zarr",
    "beautifulsoup4"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
]

test = [
    "pytest",
    "pytest-mock",
    "python-dotenv"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "downscaled_climate_data.definitions"
project_name = "DownscaledClimateData"

[tool.setuptools.packages.find]
exclude=["dagster_tests"]
